2010-08-27  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/component/decoders/generic/generic.py:
	Only use the syncronizer with the A/V decoder. It doesn't make any
	sense when we're only decoding one media type.

2010-08-26  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/component/decoders/generic/generic.py:
	Add an element to keep syncronization between video and audio output
	in a way that is consistent with the input timestamps.
	* flumotion/component/feedcomponent.py:
	Improve the way we're rid of old elements in the pipeline and disable
	the reconfiguration in encoders and muxers as it not working well yet.
	* flumotion/component/feedcomponent010.py:
	Allow the subclasses to decide wether they want to receive newsegments
	or not. Used for now by the decoder component to know when a new
	stream arrives.

2010-08-26  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/component/Makefile.am:
	How do you expect the tests to pass? Add the new module to tarball.

2010-08-26  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/component/decoders/generic/generic.py:
	* flumotion/component/feedcomponent.py:
	* flumotion/component/decodercomponent.py (added):
	Move the generic decoder to a new module

2010-08-26  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/effects/videoscale/admin_gtk.py:
	* flumotion/component/effects/videoscale/videoscale.glade:
	* flumotion/component/effects/videoscale/videoscale.py:
	* flumotion/component/producers/firewire/firewire.py:
	* flumotion/component/producers/firewire/firewire.xml:
	Add support to keep DAR with black borders

2010-08-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/producers/icecast/icecast.py:
	  Make debug log messages on icecast server uniform so they're
	  much easier to grep consistently.

2010-08-04  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/component/feedcomponent.py:
	Fix a typpo