@@ -19,6 +19,21 @@
 		  _description="Decides whether the component decodes an audio or a video stream. Should be set to either &quot;audio&quot; or &quot;video&quot;." />
         <property name="blacklist" type="string" multiple="true"
                   _description="Forbid the decoder from using some elements." />
+       <!-- Effects related properties -->
+       <property name="width" type="int"
+                  _description="The width to capture the video at." />
+       <property name="height" type="int"
+                  _description="The height to capture the video at." />
+       <property name="framerate" type="fraction"
+                  _description="Output framerate" />
+        <property name="is-square" type="bool"
+                  _description="Whether to scale to a 1:1 pixel aspect ratio." />
+       <property name="add-borders" type="bool"
+                 _description="Add black borders if DAR can't be kept." />
+       <property name="deinterlace-mode" type="string"
+                  _description="Deinterlace mode.(Default=auto)" />
+       <property name="deinterlace-method" type="string"
+                  _description="Deinterlace method.(Default=ffmpeg)" />
       </properties>
     </component>
 
@@ -39,6 +54,21 @@
       <properties>
         <property name="blacklist" type="string" multiple="true"
                   _description="Forbid the decoder from using some elements." />
+       <!-- Effects related properties -->
+       <property name="width" type="int"
+                  _description="The width to capture the video at." />
+       <property name="height" type="int"
+                  _description="The height to capture the video at." />
+       <property name="framerate" type="fraction"
+                  _description="Output framerate" />
+       <property name="is-square" type="bool"
+                  _description="Whether to scale to a 1:1 pixel aspect ratio." />
+       <property name="add-borders" type="bool"
+                 _description="Add black borders if DAR can't be kept." />
+       <property name="deinterlace-mode" type="string"
+                  _description="Deinterlace mode.(Default=auto)" />
+       <property name="deinterlace-method" type="string"
+                  _description="Deinterlace method.(Default=ffmpeg)" />
       </properties>
     </component>
 
@@ -47,6 +77,9 @@
     <bundle name="generic-decoder-component">
         <dependencies>
             <dependency name="decoders-base" />
+            <dependency name="volume-effect" />
+            <dependency name="deinterlace-effect" />
+            <dependency name="videoscale-effect" />
         </dependencies>
         <directories>
             <directory name="flumotion/component/decoders/generic">
